# Calculator

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
docs/: index.md
src/calculator_cli/: cli.py  core.py  history.py  themes.py  tui.py
tests/: conftest.py  test_placeholder.py
